Fix async + backup bugs